--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,8 @@
 <html>
+    <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content=" user-scalable=no, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="author" content="Calculon 0x00111111@gmail.com">
 <head>
 <link rel="stylesheet" type="text/css" href="css/mclassical.css">
 <script src='js/mclassical-base.js'></script>
