--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
         var Musics={};
         var ri=0;
         var rj=-70;
+        var zindex=0;
         for(var i in QQMusicUrls){
             $.get(QQMusicUrls[i],function(res){
                 res=JSON.parse(res);
@@ -47,7 +48,8 @@
                             rj+=10;
                         }
                         Musics['QQMusic_'+clist[j].songid].rx=rj;
-                        Musics['QQMusic_'+clist[j].songid].ry=ri+rj/80*360;
+                        Musics['QQMusic_'+clist[j].songid].ry=(ri+rj/80*360)%360;
+                        Musics['QQMusic_'+clist[j].songid].zindex=++zindex;
 
                         pano.loadMusic(Musics['QQMusic_'+clist[j].songid]);
                     }
