--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -142,9 +142,51 @@ html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:abs
                 background-size:100%;
                 margin-right:5px;
             }
-.music-content{width:90px;height:90px;background:#eee;margin-top:-45px;margin-left:-45px;border-radius:4px;}
-.music-content>.music-detail{position:absolute;top:-30px;width:20px;height:10px;background:#fff;visibility:hidden;}
+.music-content{position:absolute;width:90px;height:90px;top:-45px;left:-45px;background:#eee;border-radius:4px;}
 
-.music-content.showdetail{
+#music-details{
+    position:absolute;
+    top:0;
+    left:0;
+    padding:0;
+    border:0;
+    margin:0;
+    width:100%;
+    height:100%;
+    z-index:500;
+    visibility:hidden;
 }
-.music-content.showdetail>.music-detail{visibility:visible;}
+
+#music-wrap{
+    text-align:center;
+    width:100%;
+    height:300px;
+    position:relative;
+    -webkit-transition:all 0.3s ease-out;
+    -webkit-transform:scale(0.3);
+}
+#music-details.show{
+    visibility:visible;
+}
+#music-details.show #music-wrap{
+    -webkit-transform:scale(1);
+}
+#music-album{
+    display:inline-block;
+    background-size:100%;
+    height:300px;
+    width:300px;
+    background:#fff;
+}
+#music-info-wrap{
+    position:absolute;
+    width:100%;
+    top:100%;
+}
+
+#music-songname,#music-singer,#music-albumname{
+    width:100%;
+    font-size:14px;
+    color:#fff;
+    text-shadow:1px 1px 1px #000;
+}
