--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,9 +82,8 @@
 
 
         function moreInfo(e){
-            console.log("!");
             e.stopPropagation();
-
+            alert('正在开发中');
         }
         function hideDetails(){
             $('#music-details').removeClass('show');
