--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,6 +105,7 @@
             dom   : $('#pano'), // Panorama dom
             debug : false,          // Debug mode
             rx    : 0,              // Rotation around X axis with degree
+            ry    : 800,              // Rotation around X axis with degree
             maxfov: maxfov,            // Max field of view
             minfov: minfov,             // Min field of view
             fov   : fov,            // Default field of view
