--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -1,4 +1,10 @@
-html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:absolute;left:0;top:0;z-index:-1;}
+html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:absolute;left:0;top:0;z-index:-1;background-color:#fff;}
+
+*{font-family:'黑体'}
+
+td,tr,table{
+    margin:0;padding:0;box-sizing:border-box;
+}
 
 #pano   {position:absolute;top:0;left:0;width:100%;height:100%;margin:0;padding:0;overflow:hidden;z-index:1}
 
@@ -7,34 +13,6 @@ html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:abs
 .cube       {position:absolute;background-size:100%;z-index:1;}
 
 #logger     {position:absolute;top:0;width:100%;z-index:100;color:#fff;font-size:20px;text-shadow:1px 1px #000;word-break:break-all;}
-.spot_description{
-    display:inline-block;
-    width:128px;
-    text-align:center;
-    margin-left:-64px;
-    margin-top:-45px;
-}
-
-            .spot_straight,.spot_left,.spot_right,.spot_upleft,.spot_upright,.spot_dotone,.spot_dottwo,.spot_finger,.spot_magnifier,.spot_down{
-                height:55px;
-                color:#fff;
-                font-weight:bold;
-                text-shadow:1px 1px 2px #000;
-                margin-top:20px;
-                z-index:25;
-            }
-            .spot_straight>.spot_icon,.spot_left>.spot_icon,.spot_right>.spot_icon,.spot_upleft>.spot_icon,.spot_upright>.spot_icon,.spot_dotone>.spot_icon,.spot_dottwo>.spot_icon,.spot_finger>.spot_icon,.spot_magnifier>.spot_icon,.spot_down>.spot_icon{content:'';display:block;position:absolute;bottom:-50px;left:50%;margin-left:-64px;width:128px;height:128px;background-size:128px 3200px;-webkit-transform:scale(0.4);
-            }
-            .spot_straight>.spot_icon{background-image:url(/images/tools/spot0.png);}
-            .spot_left>.spot_icon{background-image:url(/images/tools/spot1.png);}
-            .spot_right>.spot_icon{background-image:url(/images/tools/spot2.png);}
-            .spot_upleft>.spot_icon{background-image:url(/images/tools/spot3.png);}
-            .spot_upright>.spot_icon{background-image:url(/images/tools/spot4.png);}
-            .spot_dotone>.spot_icon{background-image:url(/images/tools/spot5.png);}
-            .spot_dottwo>.spot_icon{background-image:url(/images/tools/spot6.png);}
-            .spot_finger>.spot_icon{background-image:url(/images/tools/spot7.png);}
-            .spot_magnifier>.spot_icon{background-image:url(/images/tools/spot8.png);}
-            .spot_down>.spot_icon{background-image:url(/images/tools/spot9.png);}
 
 .loader {
     position:absolute;
@@ -81,28 +59,6 @@ html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:abs
     }
 }
 
-.ad{
-    width:180px;
-    height:180px;
-    margin-left:-90px;
-    margin-top:-90px;
-    border-radius:90px;
-    text-align:center;
-    background-color:#fff;
-    box-shadow:0px 0px 4px #666;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(1, #cdcdcd));
-    z-index:19;
-}
-.ad-content{
-    height:100%;
-    width:100%;
-    display:-webkit-box;
-    -webkit-box-orient:vertical;
-    -webkit-box-pack:center;
-    -webkit-box-align:center;
-}
-
-}
 
 .options-wrap{position:fixed;top:42px;z-index:25;right:-38px;}
 .options-wrap>.item{height:55px;}
@@ -114,34 +70,6 @@ html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:abs
 .iselector.checked:before{content:'';display:block;background-image:url('/images/tools/check1.png');background-size:100%;width:20px;height:20px;background-repeat:no-repeat;position:absolute;top:-5px;right:-5px;
 }
 
-.comment[data-is-mosaic="1"]>.comment-content{
-    margin-left:-15px;margin-top:-15px;width:30px;height:30px;background-color:rgba(255,255,255,0.8);
-}
-            .comment-content{
-                font-size:11px;
-                z-index:5;
-                max-width:80px;
-                word-break:break-all;
-                background-color:rgba(0,0,0,0.3);
-                border:1px solid #eee;
-                border-radius:5px;
-                padding:5px;
-                color:#fff;
-                -webkit-transition:all 0.2s ease-in-out;
-            }
-            .comment-content .head{
-                content:'';
-                display:inline-block;
-                position:absolute;
-                left:-30px;
-                top:0;
-                width:25px;
-                height:25px;
-                border-radius:15px;
-                background-image:url(http://7xiljm.com1.z0.glb.clouddn.com/images/tools/anonymous_avatar.gif);
-                background-size:100%;
-                margin-right:5px;
-            }
 .music-content{position:absolute;width:90px;height:90px;top:-45px;left:-45px;background:#eee;border-radius:4px;}
 
 #music-details{
@@ -155,6 +83,10 @@ html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:abs
     height:100%;
     z-index:500;
     visibility:hidden;
+    display:-webkit-box;
+    -webkit-box-align:center;
+    -webkit-box-pack:center;
+    -webkit-orient:vertical;
 }
 
 #music-wrap{
@@ -190,10 +122,12 @@ html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:abs
     position:absolute;
     top:0;
     left:0;
+    border:0;
+    box-sizing:border-box;
     border-radius:4px;
     height:100%;
+    box-shadow:0px 0px 5px #000;
     background-size:100%;
-    box-shadow:1px 1px 5px #000;
     width:100%;
 }
 
@@ -203,6 +137,9 @@ html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:abs
     color:#fff;
     margin:3px;
     text-shadow:1px 1px 1px #000;
+}
+#music-info{
+     max-height:70px;overflow-y:scroll;-webkit-overflow-scrolling:touch;
 }
 #music-more{
     display:inline-block;
@@ -227,3 +164,185 @@ html,body{padding:0;margin:0;width:100%;height:100%;overflow:hidden;position:abs
         height:200px;
     }
 }
+        #magnifier{
+          width: 46px; height: 46px;
+          border-radius: 100%;
+
+          box-shadow:
+          0 0 7px 4px rgba(0, 0, 0, 0.25),
+          inset 0 0 40px 2px rgba(0, 0, 0, 0.25);
+
+          background-color:#fff;
+          background-image: url(/images/m_gray.jpg);
+          background-size:100%;
+          position:absolute;
+          top:0;
+          z-index:1000;
+
+        }
+#pano{display:none}
+        #magnifier:after{
+            position:absolute;
+            content:'';
+            width: 46px; height: 46px;
+            border-radius: 100%;
+            box-shadow:0 0 0 3px rgba(170, 170, 170, 1);
+        }
+        #stick{
+            width:7px;
+            height:25px;
+            background:#fff;
+            position:absolute;
+            display:none;
+
+            background-image: -webkit-linear-gradient(0deg,#C7C7C6,#A5A5A5,#E8F1E8);
+            -webkit-transform-origin-y: 0;
+            -webkit-transform-origin-x: 0;
+            -webkit-transform: translate3d(28px,33px,0px) rotateZ(-45deg);
+            border-bottom-left-radius: 2px;
+            border-bottom-right-radius: 1px;
+        }
+            #head{
+                position:absolute;
+                top:0;
+                left:0;
+                z-index:1000;
+            }
+            #logo{
+                position:absolute;
+                left:15px;
+                width:46px;
+                height:46px;
+                top:20px;
+                z-index:1000;
+            }
+            #result-wrap{bottom:100%;text-align:center;-webkit-transition:all 0.3s ease-out;-webkit-box-flex:1;position:relative;padding:6px 0px 6px 0px;-webkit-transform:rotateZ(150deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
+                visibility:hidden;
+                opacity:0.1;
+            }
+            #result-wrap.show{
+                visibility:visible;opacity:1;-webkit-transform:rotateZ(60deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
+            }
+            #result-frame{min-width:60px;height:34px;border:0;padding:0 10px 0 17px;margin:0;border-radius:0 3px 3px 0;background:rgba(0,0,0,0.3);box-shadow:0px 0px 6px rgba(0,0,0,0.3);line-height:35px;font-size:15px;color:#ddd;text-shadow:0px 0px 3px #404040;visibility:hidden;}
+            #result{
+                display:-webkit-box;
+                -webkit-box-orient:vertical;
+                position:absolute;
+                min-width:100px;min-height:200px;
+    border-radius: 3px;
+    background: rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 6px rgba(0,0,0,0.3);
+                margin-left: 24px;
+                -webkit-transform-origin-x: 0;
+                -webkit-transform-origin-y: 0;
+                -webkit-transform: rotateZ(-60deg) translateX(-28px);
+            }
+            #result-content{
+                -webkit-box-flex:1;
+                padding:5px;
+                overflow:scroll;
+                -webkit-overflow-scrolling:touch;
+            }
+            .result-imslp{
+                display:inline-block;
+                margin:3px;
+                font-size:14px;
+                color:#fdfdfd;
+                text-shadow:0px 0px 3px #666;
+                background-color:rgba(150,150,150,1);
+                padding:6px;
+                border-radius:3px;
+            }
+            .result-imslp:nth-child(even){
+                background-color:#DEDEDE;
+            }
+            .result-youku{
+                display:inline-block;
+                margin:3px;
+                font-size:14px;
+                color:#fdfdfd;
+                text-shadow:0px 0px 3px #666;
+                background-color:rgba(150,150,150,1);
+                padding:6px;
+                border-radius:3px;
+            }
+            .result-youku:nth-child(even){
+                background-color:#DEDEDE;
+            }
+            #search-wrap{
+                text-align:center;
+                -webkit-transition:all 0.4s ease-out;
+                -webkit-box-flex:1;
+                position:relative;
+                margin:6px 0px 6px 0px;
+                z-index:999;
+                top:6px;
+                -webkit-transform:perspective(100px) rotateZ(0deg) rotateY(0deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
+                opacity:0.2;
+            }
+            #search-wrap.show{
+                -webkit-transform:perspective(100px) rotateZ(0deg) rotateY(0deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
+                opacity:1;
+            }
+            #search{
+                min-width:60px;
+                height:34px;
+                border:0;
+                margin:0;
+                padding:0 10px 0 17px;
+                border-radius:0 3px 3px 0;
+                background:rgba(0,0,0,0.3);
+                box-shadow:0px 0px 6px rgba(0,0,0,0.3);
+                line-height:35px;
+                font-size:15px;
+                text-shadow:0px 0px 3px #404040;
+                color:#ddd;
+                position:relative;
+            }
+            #search-wrap.showbtn #search{
+                padding:0 50px 0 17px;
+            }
+            #btn-search{
+                position:absolute;
+                top:0;
+                border:0;
+                color:#666;
+                font-size:13px;
+                border-radius:0 3px 3px 0;
+                background-color:rgba(232,232,232,1);
+                height:100%;
+                line-height:100%;
+                visibility:hidden;
+            }
+            #search-wrap.showbtn #btn-search{
+                visibility:visible;
+            }
+            #search::-webkit-input-placeholder{
+                color:rgba(255,255,255,0.8);
+            }
+            #search.focus{-webkit-animation:none;}
+            #__getwidth{visibility:hidden;position:absolute;}
+
+            .tabs{
+                height:34px;
+                display:-webkit-box;
+                -webkit-box-orient:horizontal;
+            }
+            .tab{
+                -webkit-box-flex:1;
+                height:34px;
+                line-height:34px;
+                -webkit-transition: all 0.2s ease-out;
+                color:#666;
+                background-color:rgba(150,150,150,1);
+            }
+            .tab:last-child{
+                border-top-right-radius:3px;
+            }
+            .tab:first-child{
+                border-top-left-radius:3px;
+            }
+            .tab.selected{
+                background-color:rgba(232,232,232,1);
+            }
+
