--- a/views/index.ejs
+++ b/views/index.ejs
@@ -216,6 +216,7 @@
         function switchTab(){
             $('.tab').removeClass('selected');
             $(this).addClass('selected');
+            $('#result-content').html('');
             searchPost();
         }
         function hideResult(){
@@ -234,14 +235,14 @@
             $('#music-album').on('touchend',nothing);
 
             $('#search').on('touchend',clearSearch);
-            $('#btn-search').on('touchend',function(){search($('#search').val());});
+            $('#btn-search').on('touchend',function(){hideDetails();search($('#search').val());});
             $('.tab').on('touchend',switchTab);
         }else{
             $('#music-details').on('mouseup',hideDetails);
             $('#music-more').on('mouseup',moreInfo);
             $('#music-album').on('mouseup',nothing);
             $('#search').on('mouseup',clearSearch);
-            $('#btn-search').on('mouseup',function(){search($('#search').val());});
+            $('#btn-search').on('mouseup',function(){hideDetails();search($('#search').val());});
             $('.tab').on('mouseup',switchTab);
         }
 
