--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -215,6 +215,14 @@ td,tr,table{
                 top:20px;
                 z-index:1000;
             }
+            #about-wrap{bottom:100%;text-align:center;-webkit-transition:all 0.3s ease-out;-webkit-box-flex:1;position:relative;padding:6px 0px 6px 0px;-webkit-transform:rotateZ(150deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
+                visibility:hidden;
+                opacity:0.1;
+            }
+            #about-wrap.show{
+                visibility:visible;opacity:1;-webkit-transform:rotateZ(60deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
+            }
+            #about-stick{width:30px;height:34px;border:0;padding:0 10px 0 17px;margin:0;border-radius:0 3px 3px 0;background:rgba(193,193,193,0.9);box-shadow:0px 0px 6px rgba(0,0,0,0.3);line-height:35px;font-size:15px;color:#ddd;text-shadow:0px 0px 3px #404040;}
             #result-wrap{bottom:100%;text-align:center;-webkit-transition:all 0.3s ease-out;-webkit-box-flex:1;position:relative;padding:6px 0px 6px 0px;-webkit-transform:rotateZ(150deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
                 visibility:hidden;
                 opacity:0.1;
@@ -222,7 +230,7 @@ td,tr,table{
             #result-wrap.show{
                 visibility:visible;opacity:1;-webkit-transform:rotateZ(60deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
             }
-            #result-stick{width:30px;height:34px;border:0;padding:0 10px 0 17px;margin:0;border-radius:0 3px 3px 0;background:rgba(193,193,193,0.3);box-shadow:0px 0px 6px rgba(0,0,0,0.3);line-height:35px;font-size:15px;color:#ddd;text-shadow:0px 0px 3px #404040;}
+            #result-stick{width:30px;height:34px;border:0;padding:0 10px 0 17px;margin:0;border-radius:0 3px 3px 0;background:rgba(193,193,193,0.9);box-shadow:0px 0px 6px rgba(0,0,0,0.3);line-height:35px;font-size:15px;color:#ddd;text-shadow:0px 0px 3px #404040;}
             #result{
                 display:-webkit-box;
                 -webkit-box-orient:vertical;
@@ -258,6 +266,26 @@ td,tr,table{
             .result-imslp:nth-child(even){
                 background-color:#DEDEDE;
             }
+            .result-qqmusic{
+                box-sizing:border-box;
+                -webkit-box-align:center;
+                min-height:46px;
+                display:-webkit-box;
+                margin:3px 0 7px 0;
+                -webkit-orient:horizontal;
+                font-size:14px;
+                color:#fdfdfd;
+                text-shadow:0px 0px 3px #666;
+                background-color:rgba(150,150,150,1);
+                padding:6px;
+                border-radius:3px;
+            }
+            .result-qqmusic:nth-child(even){
+                background-color:#DEDEDE;
+            }
+            .qqmusic-info{
+                -webkit-box-flex:1;
+            }
             .result-youku{
                 box-sizing:border-box;
                 -webkit-box-align:center;
@@ -286,12 +314,16 @@ td,tr,table{
                 margin:6px 0px 6px 0px;
                 z-index:999;
                 top:6px;
-                -webkit-transform:perspective(100px) rotateZ(0deg) rotateY(0deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
-                opacity:0.2;
+                -webkit-transform:perspective(100px) rotateZ(-90deg) rotateY(0deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
+                opacity:0.01;
             }
             #search-wrap.show{
                 -webkit-transform:perspective(100px) rotateZ(0deg) rotateY(0deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
                 opacity:1;
+            }
+            #search-wrap.start{
+                -webkit-transform:perspective(100px) rotateZ(0deg) rotateY(0deg) translate3d(15px,-23px,0) translate3d(50%,50%,0);
+                opacity:0.2;
             }
             #search{
                 min-width:60px;
